  memmove functions has been fixed.  Discovered by Jason Royes and Samual
  Dytrych of the Cisco Security Assessment and Penetration Team (See
  TALOS-2020-1019).

  CVE-2020-27618: An infinite loop has been fixed in the iconv program when
  invoked with input containing redundant shift sequences in the IBM1364,
  IBM1371, IBM1388, IBM1390, or IBM1399 character sets.

The following bugs are resolved with this release:

  [9809] localedata: ckb_IQ: new Kurdish Sorani locale
  [10441] manual: Backtraces code example lacks error checking
  [10815] librt: [timer_create / SIGEV_THREAD] signalmask of
    timer_sigev_thread dangerous
  [14231] stdio: stdio-common tests memory requirements
  [14578] libc: /proc-based emulation for lchmod, fchmodat
  [16272] dynamic-link: dlopen()ing a DT_FILTER library crashes if
    filtee has constructor
  [19519] locale: iconv(1) with -c option hangs on illegal multi-byte
    sequences (CVE-2016-10228)
  [19737] admin: Doc page “20.5.2 Infinity and NaN” has incorrect HTML
    character entities for infinity & pi
  [20338] libc: Parsing of /etc/gshadow can return bad pointers causing
    segfaults in applications
  [20543] libc: Please move from .gnu.linkonce to comdat
  [22489] network: gcc warns about implicit convertion in
    ICMP6_FILTER_SETPASS with -Wsign-conversion
  [22525] localedata: or_IN  LC_COLLATE does not use copy "iso14651_t1"
  [23294] math: Complex _FloatN functions are redirected to the wrong
    function with -mlong-double-64
  [23296] libc: Data race in setting function descriptor during lazy
    binding
  [23668] dynamic-link: ldconfig: Default to the new format for
    ld.so.cache
  [23819] hurd: hurd: Add C11 thread support
  [23990] build: test-container error out on failure to exec child.
  [23991] build: shell-container typo in run_command_array
  [24638] manual: Error in example of parsing a template string
  [24654] manual: Wrong declaration of wcschr in libc manual